--- a/config/database.yml
+++ b/config/database.yml
@@ -15,6 +15,8 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  username: postgres
+  password: gra
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
@@ -80,5 +82,4 @@ test:
 production:
   <<: *default
   database: recipe_app_production
-  username: recipe_app
   password: <%= ENV["RECIPE_APP_DATABASE_PASSWORD"] %>
